--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ body {
 input {
     color: inherit;
     box-sizing: border-box;
-    padding: 5px 10px;
+    padding: 0 10px;
 }
 
 h3 {
@@ -65,9 +65,11 @@ main {
     padding-top: 30px;
     justify-content: center;
 }
-.task_content{
+
+.task_content {
     width: 400px;
 }
+
 .taskCompleted .task_content {
     color: #83e5fa;
     text-decoration: line-through;
@@ -97,7 +99,6 @@ button {
 .wrapper {
     background: #141414;
     width: 428px;
-    /*margin: 0 auto;*/
     display: flex;
     border-radius: 10px;
     box-shadow: 0 0 100px 5px rgba(212, 243, 225, 0.25);
@@ -179,10 +180,12 @@ button {
     flex-direction: column;
     align-items: center;
 }
+
 .settings {
     font-size: 16px;
 }
-.LoginButton button, .logout, .new_todo_button, .settings button, #back {
+
+.LoginButton button, .logout, .new_todo_button, .settings button, #back, #set {
     background: radial-gradient(60.25% 122.24% at 103.28% -41.67%, #FDC2B0 0%, rgba(235, 81, 158, 0.25) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
     radial-gradient(80.74% 163.82% at -1.23% -17.59%, #5AF8FE 0%, rgba(235, 81, 158, 0.25) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
     radial-gradient(49.18% 100.93% at 77.87% 111.11%, rgba(137, 59, 254, 0.85) 0%, rgba(128, 187, 219, 0.2125) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #4EDFFC;
@@ -196,6 +199,7 @@ button {
     border-radius: 10px;
     margin-bottom: 15px;
 }
+
 #main {
     padding-top: 20px;
     display: flex;
@@ -203,6 +207,7 @@ button {
     align-items: center;
     width: 398px;
 }
+
 .settings button {
     width: 40px;
 }
