--- a/static/style.css
+++ b/static/style.css
@@ -75,7 +75,7 @@ main {
 .taskCompleted .task_content {
     display: flex;
     color: #83e5fa;
-    text-decoration: line-through;
+    text-decoration: underline;
     align-items: center;
 }
 
@@ -88,11 +88,6 @@ button {
 
 .status h3 {
     padding: 16px;
-}
-
-.contentText {
-    display: flex;
-    flex-direction: row;
 }
 
 .User {
@@ -123,7 +118,7 @@ button {
     transition: background .1s, color .1s;
 }
 
-.login button:hover, .logout:hover, #set:hover, .new_todo_button:hover {
+.login button:hover, .logout:hover, #set:hover, .new_todo_button:hover, .back:hover, #settings button:hover {
     background-color: rgba(0, 0, 0, .05);
     transition: background .1s, color .1s;
 }
@@ -189,7 +184,7 @@ button {
     font-size: 16px;
 }
 
-.LoginButton button, .logout, .new_todo_button, .settings button, #back, #set {
+.LoginButton button, .logout, .new_todo_button, .settings button, #back, #set, .back {
     background: radial-gradient(60.25% 122.24% at 103.28% -41.67%, #FDC2B0 0%, rgba(235, 81, 158, 0.25) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
     radial-gradient(80.74% 163.82% at -1.23% -17.59%, #5AF8FE 0%, rgba(235, 81, 158, 0.25) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */,
     radial-gradient(49.18% 100.93% at 77.87% 111.11%, rgba(137, 59, 254, 0.85) 0%, rgba(128, 187, 219, 0.2125) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #4EDFFC;
@@ -250,4 +245,43 @@ hr {
     font-size: 60px;
     font-weight: bold;
     box-shadow: 0 0 100px 1px rgba(245, 222, 179, 0.5);
+}
+
+.taskCompleted {
+    box-shadow: 0 0 10px 1px rgba(131, 229, 250, 0.49);
+}
+
+#error {
+    background: rgba(59, 23, 23, 0.2);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.errorBox {
+    width: 500px;
+    height: 200px;
+    background: #181818;
+    border-radius: 10px;
+    box-shadow: inset 0 0 3em 0.1em rgba(255, 0, 0, 0.49), 0 0 3em 0.1em rgba(255, 0, 0, 0.49);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, serif;
+    justify-content: space-evenly;
+}
+
+.errorMessage {
+    margin: 0 20px;
+    text-align: center;
+    font-size: 20px;
+    height: 50px;
+}
+
+.back {
+    margin-bottom: 0;
 }
